# Victus-AI

./: .gitignore  README.md  pyproject.toml  run.py
src/victus_ai/: main.py
src/victus_ai/agent/: graph.py  schema.py
src/victus_ai/agent/nodes/: agent_node.py  llm_node.py  router_node.py  tool_node.py
src/victus_ai/core/: logging_config.py
tests/: test_victus_graph.py
