[project]
name = "victus-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav Vijay Jadhav",email = "gaurav.vjadhav01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "nicegui (>=2.21.0,<3.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langgraph (>=0.5.1,<0.6.0)",
    "openai (>=1.93.2,<2.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "edge-tts (>=7.0.2,<8.0.0)",
    "whisper (>=1.1.10,<2.0.0)",
    "huggingface-hub (>=0.33.2,<0.34.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)"
]

[tool.poetry]
packages = [{include = "victus_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
